ADD: config-server module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=config-server
+server.port=8888
+spring.cloud.config.server.git.uri=C:/Users/elezcano/IdeaProjects/paymentchainparent/config-server-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=master
+spring.security.user.name=default
+spring.security.user.password=secret!123
